changed to fetch from render

--- a/public/privacy_policy.html
+++ b/public/privacy_policy.html
@@ -60,15 +60,26 @@
 
       <h2 class="text-2xl font-semibold mt-6 mb-2">Third-Party Services</h2>
       <p class="mb-4">
-        We use Google Analytics (by Google LLC). You can review their privacy
-        policy at
+        We use Google Analytics to collect information about how visitors use
+        this Website. This includes details such as your IP address, which is
+        anonymized before being stored on Google's servers in the United States.
+        IP anonymization means that a portion of your IP address is masked,
+        preventing it from being used to precisely identify your location or
+        device. Google uses this anonymized data to evaluate website traffic,
+        generate reports for us, and provide other related services. In some
+        cases, Google may transfer this information to third parties if legally
+        required or if those parties process the data on Google’s behalf. You
+        can disable cookies by adjusting your browser settings. By continuing to
+        use this Website and accepting cookies, you agree to the collection and
+        processing of your data by Google as described. For more control, you
+        can opt out using the tools provided at
         <a
           href="https://policies.google.com/privacy"
           target="_blank"
           rel="noopener noreferrer"
           class="text-blue-600 underline"
         >
-          https://policies.google.com/privacy </a
+          https://tools.google.com/dlpage/gaoptout/ </a
         >.
       </p>
 
